--- a/ModelConverter.vcxproj
+++ b/ModelConverter.vcxproj
@@ -18,6 +18,13 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\ModelConverter.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\ModelConverter.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <ProjectGuid>{12B12744-C4E5-4A50-B08D-43C3E71E767C}</ProjectGuid>
@@ -162,12 +169,6 @@
       <AdditionalDependencies>assimp-vc140-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="ModelConverter.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="ModelConverter.h" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
