--- a/.gitignore
+++ b/.gitignore
@@ -358,3 +358,7 @@ healthchecksdb
 /geo.s3d
 /soldier.s3d
 /log.txt
+/beo.s3d
+/Armature_TestAnim.clp
+/Armature_TestAnim.001.clp
+/Armature_ArmatureAction.clp
