save before rework

--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,7 @@ healthchecksdb
 /Armature_TestAnim.001.clp
 /Armature_ArmatureAction.clp
 /Armature_Test.clp
+/basic_s.s3d
+/geo2.s3d
+/Rig_Animation1.clp
+/take1.clp
