--- a/ModelConverter.vcxproj.filters
+++ b/ModelConverter.vcxproj.filters
@@ -21,12 +21,15 @@
     <ClCompile Include="src\main.cpp">
       <Filter>Source Files\src</Filter>
     </ClCompile>
-    <ClCompile Include="src\ModelConverter.cpp">
+    <ClCompile Include="src\modelconverter.cpp">
       <Filter>Source Files\src</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\ModelConverter.h">
+    <ClInclude Include="src\data.h">
+      <Filter>Source Files\src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\modelconverter.h">
       <Filter>Source Files\src</Filter>
     </ClInclude>
   </ItemGroup>
